Delete rule that compiles the normal way. Make the static-library-making rule the primary rule (all). Add a clean command to remove .o files in the Utils directory after the static library is created.

--- a/Utils/Makefile
+++ b/Utils/Makefile
@@ -9,6 +9,7 @@ libUtils.a: $(patsubst %.cpp, %.o, $(wildcard ./*.cpp))
 	echo "Lib directory is: $(LIB_DIR)"
 	ar rcs $@ $^
 	mv $@ $(LIB_DIR)/$@
+	make clean
 
 # With the -c flag, g++ skips the linking step
 # Without -c, g++ tries to search for a 'main' function
