Remove the auto-clean command in the sub makefile build step. Modifiy Makefiles so that programs are compiled incrementally based on local changes. For the main Makefile, the build command is dependent on main.o. And main.o is dependent on main.cpp and the static lib. In the sub Makefile, the static lib file depends on all .o files. And all .o files depend on their .cpp and .h counterparts.

--- a/Utils/Makefile
+++ b/Utils/Makefile
@@ -8,17 +8,16 @@ libUtils.a: $(patsubst %.cpp, %.o, $(wildcard ./*.cpp))
 	echo "$@: $^"
 	echo "Lib directory is: $(LIB_DIR)"
 	ar rcs $@ $^
-	mv $@ $(LIB_DIR)/$@
-	make clean
+	mv $@ $(LIB_DIR)/$@	
 
 # With the -c flag, g++ skips the linking step
 # Without -c, g++ tries to search for a 'main' function
 # If a main does not exist, g++ will error out with:
 # 	Undefined symbols [...]: "_main"
 # https://stackoverflow.com/questions/8439664/what-does-the-compile-time-error-undefined-symbols-for-architecture-x86-64-mea
-%.o: %.cpp
+%.o: %.cpp %.h
 	echo "$@: $^"
-	g++ -c $^ -o $@
+	g++ -c $< -o $@
 
 myrule:
 	echo "hello sub-makefile!!"
